Moved student services link position. Fixed plus icon not showing in useful link edit.

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -3638,6 +3638,7 @@ a.text-neutral {
   top: 0;
   height: 100%;
   width: 3em;
+  color: #FFF;
   background-color: #0098d0; }
   .new-useful-link__add-button:link, .new-useful-link__add-button:hover, .new-useful-link__add-button:active, .new-useful-link__add-button:visited {
     color: #FFF; }
